// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon ac renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M22,11h-4.2L21,7.8l-1.4-1.4L15,11h-2V9l4.7-4.7l-1.4-1.4L13,6.2V2h-2v4.2L7.8,2.9L6.3,4.3L11,9v2H9L4.3,6.3
  	L2.9,7.8L6.2,11H2v2h4.2L3,16.2l1.4,1.4L9,13h2v2l-4.7,4.7l1.4,1.4l3.3-3.3V22h2v-4.2l3.2,3.2l1.4-1.4L13,15v-2h2l4.7,4.7l1.4-1.4
  	L17.8,13H22V11z"
  />
</svg>
`;

exports[`Icon accessible renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19,13v-2c-1.5,0-3.1-0.8-4.1-1.8l-1.3-1.5c-0.1-0.1-0.3-0.3-0.6-0.4l0,0l0,0
  	C12.7,7.1,12.2,7,11.8,7c-1,0.1-1.8,1-1.8,2.1V15c0,1.1,0.9,2,2,2h5v5h2v-5.5c0-1.1-0.9-2-2-2h-3v-3.4C15.3,12.1,17.2,13,19,13z
  	 M12.8,18h2.1c-0.5,2.3-2.5,4-4.9,4c-2.8,0-5-2.2-5-5c0-2.4,1.7-4.4,4-4.9v2.1c-1.2,0.4-2,1.5-2,2.8c0,1.7,1.3,3,3,3
  	C11.3,20,12.4,19.2,12.8,18z M12,6c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S13.1,6,12,6z"
  />
</svg>
`;

exports[`Icon arrival renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M2.5,19.5h19v2h-19V19.5z M9.7,13.8L14,15l5.3,1.4c0.8,0.2,1.6-0.3,1.8-1.1
  	c0.2-0.8-0.3-1.6-1.1-1.8l-5.3-1.4l-2.8-9l-1.8-0.6v8.3l-5-1.3L4.2,7.1L2.8,6.7v5.2l1.6,0.4L9.7,13.8z"
  />
</svg>
`;

exports[`Icon arrowDown renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,12l-1.4-1.4L13,16.2V4h-2v12.2l-5.6-5.6L4,12l8,8L20,12z"
  />
</svg>
`;

exports[`Icon arrowLeft renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,11H7.8l5.6-5.6L12,4l-8,8l8,8l1.4-1.4L7.8,13H20V11z"
  />
</svg>
`;

exports[`Icon arrowRight renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,4l-1.4,1.4l5.6,5.6H4v2h12.2l-5.6,5.6L12,20l8-8L12,4z"
  />
</svg>
`;

exports[`Icon arrowUp renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M4,12l1.4,1.4L11,7.8V20h2V7.8l5.6,5.6L20,12l-8-8L4,12z"
  />
</svg>
`;

exports[`Icon attention renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M1,21.5h22l-11-19L1,21.5z M13,18.5h-2v-2h2V18.5z M13,14.5h-2v-4h2V14.5z"
  />
</svg>
`;

exports[`Icon automatic renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M14.3,15.3H16L12.9,8h-1.7L8,15.3h1.7l0.6-1.4h3.4L14.3,15.3z M10.8,12.6L12,9.7l1.2,2.8h-2.4
  	V12.6L10.8,12.6z"
  />
</svg>
`;

exports[`Icon bag renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,6.5h-3v-2c0-1.1-0.9-2-2-2H9c-1.1,0-2,0.9-2,2v2H4c-1.1,0-2,0.9-2,2v11c0,1.1,0.9,2,2,2h16
  	c1.1,0,2-0.9,2-2v-11C22,7.4,21.1,6.5,20,6.5z M9,4.5h6v2H9V4.5z M20,19.5H4v-2h16V19.5z M20,14.5H4v-6h3v2h2v-2h6v2h2v-2h3V14.5z"
  />
</svg>
`;

exports[`Icon beach renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M13.2,14.6l1.4-1.4l6.4,6.4L19.7,21L13.2,14.6z M17.5,8.8L20.4,6C16.4,2,10,2,6.1,5.9
  	C10,4.6,14.4,5.7,17.5,8.8L17.5,8.8z M6,6C2.1,9.9,2.1,16.3,6.1,20.3L9,17.4C5.8,14.3,4.7,9.9,6,6z M6.1,6L6.1,6
  	c-0.4,3,1.1,6.8,4.3,10l5.7-5.7C13,7.1,9.1,5.6,6.1,6z"
  />
</svg>
`;

exports[`Icon bed renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7.5,12.3c1.5,0,2.7-1.2,2.7-2.7S9,6.8,7.5,6.8S4.7,8,4.7,9.5S5.9,12.3,7.5,12.3z M18.4,6.8
  	h-7.3v6.4H3.8V5H2v13.6h1.8v-2.7h16.4v2.7H22v-8.1C22,8.5,20.4,6.8,18.4,6.8z"
  />
</svg>
`;

exports[`Icon boxChecked renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M6,3h12c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z M10,17
  	l9-8.6L17.6,7L10,14.3l-3.6-3.5L5,12.2L10,17z"
  />
</svg>
`;

exports[`Icon boxEmpty renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M6,5C5.4,5,5,5.4,5,6v12c0,0.6,0.4,1,1,1h12c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1H6z M6,3h12
  	c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z"
  />
</svg>
`;

exports[`Icon boxMinus renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M6,5C5.4,5,5,5.4,5,6v12c0,0.6,0.4,1,1,1h12c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1H6z M6,3h12
  	c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z M7,11v2h10v-2H7z"
  />
</svg>
`;

exports[`Icon boxPlus renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M6,5C5.4,5,5,5.4,5,6v12c0,0.6,0.4,1,1,1h12c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1H6z M6,3h12
  	c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z M13,7h-2v4H7v2h4v4h2v-4h4v-2h-4V7z"
  />
</svg>
`;

exports[`Icon breakfast renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19,3H3v10c0,2.2,1.8,4,4,4h6c2.2,0,4-1.8,4-4v-3h2c1.1,0,2-0.9,2-2V5C21,3.9,20.1,3,19,3z
  	 M19,8h-2V5h2V8z M3,19h16v2H3V19z"
  />
</svg>
`;

exports[`Icon build renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21.7,18.3L13.5,10c0.8-2.1,0.4-4.6-1.4-6.3c-1.8-1.8-4.5-2.2-6.7-1.2l3.9,3.9L6.6,9.2l-4-3.9
  	C1.5,7.5,1.9,10.2,3.8,12c1.7,1.7,4.2,2.2,6.3,1.4l8.3,8.3c0.4,0.4,0.9,0.4,1.3,0l2.1-2.1C22.1,19.3,22.1,18.6,21.7,18.3z"
  />
</svg>
`;

exports[`Icon business renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M10,16v-1H3v4c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2v-4h-7v1H10z M20,7h-4V5l-2-2h-4L8,5v2H4
  	C2.9,7,2,7.9,2,9v3c0,1.1,0.9,2,2,2h6v-2h4v2h6c1.1,0,2-0.9,2-2V9C22,7.9,21.1,7,20,7z M14,7h-4V5h4V7z"
  />
</svg>
`;

exports[`Icon calendar renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M9,11H7v2h2V11z M13,11h-2v2h2V11z M17,11h-2v2h2V11z M19,4h-1V2h-2v2H8V2H6v2H5
  	C3.9,4,3,4.9,3,6v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V6C21,4.9,20.1,4,19,4z M19,20H5V9h14V20z"
  />
</svg>
`;

exports[`Icon carCircle renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M16.2,7.6
  	C16.1,7.3,15.8,7,15.4,7H8.6C8.2,7,7.9,7.3,7.8,7.6l-1.3,3.7v5c0,0.3,0.3,0.6,0.6,0.6h0.6c0.3,0,0.6-0.3,0.6-0.6v-0.6h7.3v0.6
  	c0,0.3,0.3,0.6,0.6,0.6h0.6c0.3,0,0.6-0.3,0.6-0.6v-5L16.2,7.6z M8.6,13.9c-0.5,0-0.9-0.4-0.9-0.9S8.1,12,8.6,12s0.9,0.4,0.9,0.9
  	S9.1,13.9,8.6,13.9z M15.4,13.9c-0.5,0-0.9-0.4-0.9-0.9s0.4-0.9,0.9-0.9s0.9,0.4,0.9,0.9S15.9,13.9,15.4,13.9z M7.7,10.8l0.9-2.8
  	h6.7l0.9,2.8H7.7z"
  />
</svg>
`;

exports[`Icon carDoor renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M18,2h-6.9l0,0c-0.7,0-1.3,0.3-1.7,0.9l-5,7.6l0,0C4.1,10.8,4,11.2,4,11.6V20c0,1.1,0.9,2,2,2
  	h12c1.1,0,2-0.9,2-2V4C20,2.9,19.1,2,18,2z M18,11H6.7l4.7-7H18V11z"
  />
</svg>
`;

exports[`Icon carriage renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M13.5,2v8h8C21.5,5.6,17.9,2,13.5,2z M19.8,15.9c1.1-1.4,1.7-3.1,1.7-4.9H6.9L6,9H2.5v2h2.2
  	c0,0,1.9,4.1,2.1,4.4C5.7,16,5,17.2,5,18.5C5,20.4,6.6,22,8.5,22c1.8,0,3.2-1.3,3.5-3H14c0.2,1.7,1.7,3,3.5,3c1.9,0,3.5-1.6,3.5-3.5
  	C21,17.5,20.5,16.5,19.8,15.9z M8.5,20C7.7,20,7,19.3,7,18.5S7.7,17,8.5,17s1.5,0.7,1.5,1.5S9.3,20,8.5,20z M17.5,20
  	c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5S18.3,20,17.5,20z"
  />
</svg>
`;

exports[`Icon cars renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M18.9,5c-0.2-0.6-0.8-1-1.4-1h-11C5.8,4,5.3,4.4,5.1,5L3,11v8c0,0.6,0.4,1,1,1h1
  	c0.5,0,1-0.4,1-1v-1h12v1c0,0.6,0.4,1,1,1h1c0.5,0,1-0.4,1-1v-8L18.9,5z M6.5,15C5.7,15,5,14.3,5,13.5S5.7,12,6.5,12S8,12.7,8,13.5
  	S7.3,15,6.5,15z M17.5,15c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5S18.3,15,17.5,15z M5,10l1.5-4.5h11L19,10H5z"
  />
</svg>
`;

exports[`Icon casino renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19,3H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V5C21,3.9,20.1,3,19,3z M7.5,18
  	C6.7,18,6,17.3,6,16.5S6.7,15,7.5,15S9,15.7,9,16.5S8.3,18,7.5,18z M7.5,9C6.7,9,6,8.3,6,7.5S6.7,6,7.5,6S9,6.7,9,7.5S8.3,9,7.5,9z
  	 M12,13.5c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5S12.8,13.5,12,13.5z M16.5,18c-0.8,0-1.5-0.7-1.5-1.5
  	s0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5S17.3,18,16.5,18z M16.5,9C15.7,9,15,8.3,15,7.5S15.7,6,16.5,6S18,6.7,18,7.5S17.3,9,16.5,9z"
  />
</svg>
`;

exports[`Icon chart renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19,3H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V5C21,3.9,20.1,3,19,3z M9,17H7
  	v-7h2V17z M13,17h-2V7h2V17z M17,17h-2v-4h2V17z"
  />
</svg>
`;

exports[`Icon chat renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,2H4C2.9,2,2,2.9,2,4v18l4-4h14c1.1,0,2-0.9,2-2V4C22,2.9,21.1,2,20,2z M6,9h12v2H6V9z
  	 M14,14H6v-2h8V14z M18,8H6V6h12V8z"
  />
</svg>
`;

exports[`Icon check renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M8.6,15.6l-4.2-4.2L3,12.8l5.6,5.6l12-12L19.2,5L8.6,15.6z"
  />
</svg>
`;

exports[`Icon chevronDown renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
  />
</svg>
`;

exports[`Icon chevronLeft renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M15.4,16.6L10.8,12l4.6-4.6L14,6l-6,6l6,6L15.4,16.6z"
  />
</svg>
`;

exports[`Icon chevronRight renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M8,16.6l4.6-4.6L8,7.4L9.4,6l6,6l-6,6L8,16.6z"
  />
</svg>
`;

exports[`Icon chevronUp renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7.4,15.4l4.6-4.6l4.6,4.6L18,14l-6-6l-6,6L7.4,15.4z"
  />
</svg>
`;

exports[`Icon cityView renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M15,11.5v-6l-3-3l-3,3v2H3v14h18v-10H15z M7,19.5H5v-2h2V19.5z M7,15.5H5v-2h2V15.5z M7,11.5H5
  	v-2h2V11.5z M13,19.5h-2v-2h2V19.5z M13,15.5h-2v-2h2V15.5z M13,11.5h-2v-2h2V11.5z M13,7.5h-2v-2h2V7.5z M19,19.5h-2v-2h2V19.5z
  	 M19,15.5h-2v-2h2V15.5z"
  />
</svg>
`;

exports[`Icon clock renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M12.5,12.2l4.5,2.7l-0.8,1.2L11,13V7h1.5V12.2z"
  />
</svg>
`;

exports[`Icon close renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19,6.4L17.6,5L12,10.6L6.4,5L5,6.4l5.6,5.6L5,17.6L6.4,19l5.6-5.6l5.6,5.6l1.4-1.4L13.4,12L19,6.4z"
  />
</svg>
`;

exports[`Icon cloud renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M18.1,10C17.6,7.2,15,5,12,5C9.6,5,7.5,6.4,6.5,8.4C4,8.6,2,10.8,2,13.3c0,2.8,2.2,5,5,5h10.8
  	c2.3,0,4.2-1.9,4.2-4.2C22,12,20.3,10.2,18.1,10z M17.8,16.7H7c-1.8,0-3.3-1.5-3.3-3.3S5.2,10,7,10h0.6C8.1,8.1,9.9,6.7,12,6.7
  	c2.5,0,4.6,2.1,4.6,4.6v0.4h1.2c1.4,0,2.5,1.1,2.5,2.5S19.2,16.7,17.8,16.7z"
  />
</svg>
`;

exports[`Icon collisionCoverage renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,1l9,4v6c0,5.5-3.8,10.7-9,12c-5.2-1.3-9-6.5-9-12V5L12,1z M16.2,7.6C16.1,7.3,15.8,7,15.4,7
  	H8.6C8.2,7,7.9,7.3,7.8,7.6l-1.3,3.7v5c0,0.3,0.3,0.6,0.6,0.6h0.6c0.3,0,0.6-0.3,0.6-0.6v-0.6h7.3v0.6c0,0.3,0.3,0.6,0.6,0.6h0.6
  	c0.3,0,0.6-0.3,0.6-0.6v-5L16.2,7.6z M8.6,13.9c-0.5,0-0.9-0.4-0.9-0.9S8.1,12,8.6,12s0.9,0.4,0.9,0.9S9.1,13.9,8.6,13.9z
  	 M15.4,13.9c-0.5,0-0.9-0.4-0.9-0.9s0.4-0.9,0.9-0.9s0.9,0.4,0.9,0.9S15.9,13.9,15.4,13.9z M7.7,10.8l0.9-2.8h6.7l0.9,2.8H7.7z"
  />
</svg>
`;

exports[`Icon coupon renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21.4,11.6l-9-9C12.1,2.2,11.6,2,11,2H4C2.9,2,2,2.9,2,4v7c0,0.6,0.2,1.1,0.6,1.4l9,9
  	C12,21.8,12.5,22,13,22s1.1-0.2,1.4-0.6l7-7C21.8,14,22,13.5,22,13S21.8,11.9,21.4,11.6z M5.5,7C4.7,7,4,6.3,4,5.5S4.7,4,5.5,4
  	S7,4.7,7,5.5S6.3,7,5.5,7z"
  />
</svg>
`;

exports[`Icon creditCard renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,18H4
  	v-6h16V18z M20,8H4V6h16V8z"
  />
</svg>
`;

exports[`Icon cruises renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19.2,20.2c-1.3,0-2.5-0.5-3.6-1.2c-2.2,1.5-5,1.5-7.2,0c-1.1,0.7-2.3,1.2-3.6,1.2H3V22h1.8
  	c1.3,0,2.4-0.4,3.6-0.9c2.2,1.2,5,1.2,7.2,0c1.2,0.5,2.3,0.9,3.6,0.9H21v-1.8H19.2z M4.8,18.4L4.8,18.4c1.4,0,2.7-0.8,3.6-1.8
  	c0.9,1,2.2,1.8,3.6,1.8s2.7-0.8,3.6-1.8c0.9,1,2.2,1.8,3.6,1.8l0,0l1.7-6.1c0.1-0.3,0.1-0.5-0.1-0.7c-0.1-0.2-0.3-0.4-0.5-0.5
  	l-1.1-0.4V6.5c0-1-0.8-1.8-1.8-1.8h-2.7V2H9.3v2.7H6.6c-1,0-1.8,0.8-1.8,1.8v4.2l-1.2,0.4c-0.3,0.1-0.5,0.3-0.5,0.5
  	C3,11.7,3,12.1,3,12.3L4.8,18.4z M6.6,6.5h10.8v3.6L12,8.4l-5.4,1.8V6.5z"
  />
</svg>
`;

exports[`Icon departure renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M2.5,19h19v2h-19V19z M22.1,9.1c-0.2-0.8-1-1.3-1.8-1.1l-5.4,1.5L8,3.1L6.1,3.6l4.1,7.2l-5,1.3
  	l-1.9-1.6l-1.5,0.4l1.8,3.2l0.8,1.3L6,15l5.3-1.4l4.3-1.2L21,11C21.8,10.8,22.3,9.9,22.1,9.1z"
  />
</svg>
`;

exports[`Icon devices renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M5.4,6.8h15V5h-15C4.5,5,3.7,5.7,3.7,6.8v9.6H2V19h11.6v-2.6H5.4V6.8z M21.2,8.5h-5
  	c-0.5,0-0.8,0.4-0.8,0.8v8.8c0,0.5,0.4,0.8,0.8,0.8h5c0.5,0,0.8-0.4,0.8-0.8V9.4C22,8.9,21.6,8.5,21.2,8.5z M20.4,16.4H17v-6.2h3.4
  	V16.4z"
  />
</svg>
`;

exports[`Icon directions renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21.7,11.3l-9-9c-0.4-0.4-1-0.4-1.4,0l-9,9c-0.4,0.4-0.4,1,0,1.4l9,9c0.4,0.4,1,0.4,1.4,0l9-9
  	C22.1,12.3,22.1,11.7,21.7,11.3z M14,14.5V12h-4v3H8v-4c0-0.5,0.5-1,1-1h5V7.5l3.5,3.5L14,14.5z"
  />
</svg>
`;

exports[`Icon discount renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M23,12l-2.4,2.7l0.3,3.5L17.3,19l-1.9,3L12,20.6L8.6,22l-1.9-3l-3.6-0.8l0.3-3.5L1,12l2.4-2.7
  	L3.1,5.8L6.7,5l1.9-3L12,3.4L15.4,2l1.9,3l3.6,0.8l-0.3,3.5L23,12z M12.2,11.4c-1.3-0.3-1.8-0.7-1.8-1.3c0-0.6,0.6-1.1,1.6-1.1
  	c1,0,1.4,0.5,1.5,1.2h1.3c0-1-0.7-1.9-1.9-2.2V6.7h-1.8V8C10,8.2,9.1,9,9.1,10.1c0,1.3,1.1,2,2.8,2.4c1.5,0.4,1.8,0.9,1.8,1.4
  	c0,0.4-0.3,1-1.6,1c-1.2,0-1.7-0.5-1.8-1.2H9c0.1,1.3,1,2,2.2,2.2v1.3h1.8V16c1.1-0.2,2.1-0.9,2.1-2.1C15,12.3,13.6,11.7,12.2,11.4z
  	"
  />
</svg>
`;

exports[`Icon document renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M14,2H6C4.9,2,4,2.9,4,4v16c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V8L14,2z M16,18H8v-2h8V18z
  	 M16,14H8v-2h8V14z M13,9V3.5L18.5,9H13z"
  />
</svg>
`;

exports[`Icon dollar renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,10.9c-2.3-0.6-3-1.2-3-2.1C9,7.7,10,7,11.7,7c1.8,0,2.4,0.8,2.5,2.1h2.2c-0.1-1.7-1.1-3.3-3.2-3.8V3h-3v2.2
  	C8.3,5.6,6.7,6.8,6.7,8.8c0,2.3,1.9,3.5,4.7,4.1c2.5,0.6,3,1.5,3,2.4c0,0.7-0.5,1.8-2.7,1.8c-2.1,0-2.9-0.9-3-2.1H6.5
  	c0.1,2.2,1.8,3.4,3.7,3.8V21h3v-2.1c1.9-0.4,3.5-1.5,3.5-3.6C16.7,12.5,14.3,11.5,12,10.9z"
  />
</svg>
`;

exports[`Icon dollarCircle renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13.4,18.1V20h-2.7v-1.9
  	c-1.7-0.4-3.2-1.5-3.3-3.4h2c0.1,1.1,0.8,1.9,2.6,1.9c2,0,2.4-1,2.4-1.6c0-0.8-0.4-1.6-2.7-2.1c-2.5-0.6-4.2-1.6-4.2-3.7
  	c0-1.7,1.4-2.8,3.1-3.2V4h2.7v1.9c1.9,0.5,2.8,1.9,2.9,3.4h-2c-0.1-1.1-0.6-1.9-2.2-1.9c-1.5,0-2.4,0.7-2.4,1.6
  	c0,0.8,0.6,1.4,2.7,1.9c2,0.5,4.2,1.4,4.2,3.9C16.5,16.8,15.1,17.8,13.4,18.1z"
  />
</svg>
`;

exports[`Icon earlyBird renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19.1,14.9L22,12l-2.9-2.9V4.9h-4.1L12,2L9.1,4.9H4.9v4.1L2,12l2.9,2.9v4.1h4.1L12,22l2.9-2.9
  	h4.1V14.9z M12,17.3c-2.9,0-5.3-2.4-5.3-5.3S9.1,6.7,12,6.7s5.3,2.4,5.3,5.3S14.9,17.3,12,17.3z"
  />
</svg>
`;

exports[`Icon edit renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M3,17.2V21h3.8l11-11.1L14,6.1L3,17.2z M20.7,7c0.4-0.4,0.4-1,0-1.4l-2.3-2.3
  	c-0.4-0.4-1-0.4-1.4,0l-1.8,1.8L19,8.9L20.7,7z"
  />
</svg>
`;

exports[`Icon electric renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7,2v11h3v9l7-12h-4l4-8H7z"
  />
</svg>
`;

exports[`Icon email renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
  	l-8,5L4,8V6l8,5l8-5V8z"
  />
</svg>
`;

exports[`Icon event renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M17,13h-5v5h5V13z M16,2v2H8V2H6v2H5C3.9,4,3,4.9,3,6l0,14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2
  	V6c0-1.1-0.9-2-2-2h-1V2H16z M19,20H5V9h14V20z"
  />
</svg>
`;

exports[`Icon eventAvailable renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M16.5,12.1L15.5,11l-4.9,4.9l-2.1-2.1l-1.1,1.1l3.2,3.2L16.5,12.1L16.5,12.1z M19,4h-1V2h-2v2H8
  	V2H6v2H5C3.9,4,3,4.9,3,6l0,14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V6C21,4.9,20.1,4,19,4z M19,20H5V9h14V20z"
  />
</svg>
`;

exports[`Icon eventBusy renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M9.3,18l2.4-2.4l2.4,2.4l1.1-1.1l-2.4-2.4l2.4-2.4L14.2,11l-2.4,2.4L9.3,11l-1.1,1.1l2.4,2.4
  	l-2.4,2.4L9.3,18z M19,4h-1V2h-2v2H8V2H6v2H5C3.9,4,3,4.9,3,6l0,14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V6C21,4.9,20.1,4,19,4z
  	 M19,20H5V9h14V20z"
  />
</svg>
`;

exports[`Icon facebook renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20.9,22H3.1C2.5,22,2,21.5,2,20.9V3.1C2,2.5,2.5,2,3.1,2h17.8C21.5,2,22,2.5,22,3.1v17.8
  	C22,21.5,21.5,22,20.9,22z M15.8,22v-7.7h2.6l0.4-3h-3V9.3c0-0.9,0.2-1.5,1.5-1.5l1.6,0V5.1c-0.3,0-1.2-0.1-2.3-0.1
  	c-2.3,0-3.9,1.4-3.9,4v2.2h-2.6v3h2.6V22H15.8z"
  />
</svg>
`;

exports[`Icon favoriteHotel renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,20.9l-1.4-1.3C5.4,14.9,2,11.8,2,8c0-3.1,2.4-5.5,5.5-5.5c1.7,0,3.4,0.8,4.5,2.1
  	c1.1-1.3,2.8-2.1,4.5-2.1C19.6,2.5,22,4.9,22,8c0,3.8-3.4,6.9-8.6,11.5L12,20.9z M9.7,10.7c0.8,0,1.4-0.6,1.4-1.4s-0.6-1.4-1.4-1.4
  	C9,7.9,8.4,8.6,8.4,9.3S9,10.7,9.7,10.7z M15.2,7.9h-3.6v3.3H7.9V7H7v7h0.9v-1.4h8.2V14H17V9.8C17,8.8,16.2,7.9,15.2,7.9z"
  />
</svg>
`;

exports[`Icon filter renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M10,18h4v-2h-4V18z M3,6v2h18V6H3z M6,13h12v-2H6V13z"
  />
</svg>
`;

exports[`Icon fitness renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20.6,14.9l1.4-1.4L20.6,12L17,15.6L8.4,7L12,3.4L10.6,2L9.1,3.4L7.7,2L5.6,4.1L4.1,2.7L2.7,4.1l1.4,1.4L2,7.7
  	l1.4,1.4L2,10.6L3.4,12L7,8.4l8.6,8.6L12,20.6l1.4,1.4l1.4-1.4l1.4,1.4l2.1-2.1l1.4,1.4l1.4-1.4l-1.4-1.4l2.1-2.1L20.6,14.9z"
  />
</svg>
`;

exports[`Icon flame renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M13.5,1c0,0,0.7,2.7,0.7,4.8c0,2.1-1.3,3.7-3.4,3.7c-2.1,0-3.6-1.7-3.6-3.7l0-0.4
  	C5.2,7.8,4,10.9,4,14.3c0,4.4,3.6,8,8,8s8-3.6,8-8C20,8.9,17.4,4.1,13.5,1z M11.7,19.3c-1.8,0-3.2-1.4-3.2-3.1
  	c0-1.6,1.1-2.8,2.8-3.1c1.8-0.4,3.6-1.2,4.6-2.6c0.4,1.3,0.6,2.7,0.6,4C16.5,17.2,14.4,19.3,11.7,19.3z"
  />
</svg>
`;

exports[`Icon flightCircle renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M17,14.2v-1.1l-4.2-2.8v-3
  	c0-0.5-0.4-0.8-0.8-0.8s-0.8,0.4-0.8,0.8v3L7,13.1v1.1l4.2-1.4v3l-1.1,0.8v0.8L12,17l1.8,0.5v-0.8l-1.1-0.8v-3L17,14.2z"
  />
</svg>
`;

exports[`Icon flightCoverage renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,1l9,4v6c0,5.5-3.8,10.7-9,12c-5.2-1.3-9-6.5-9-12V5L12,1z M17,13.7v-1.1l-4.2-2.8v-3
  	C12.8,6.4,12.4,6,12,6s-0.8,0.4-0.8,0.8v3L7,12.6v1.1l4.2-1.4v3l-1.1,0.8V17l1.8-0.5l1.8,0.5v-0.8l-1.1-0.8v-3L17,13.7z"
  />
</svg>
`;

exports[`Icon flights renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21.5,16v-2l-8-5V3.5C13.5,2.7,12.8,2,12,2s-1.5,0.7-1.5,1.5V9l-8,5v2l8-2.5V19l-2,1.5V22l3.5-1l3.5,1v-1.5
  	l-2-1.5v-5.5L21.5,16z"
  />
</svg>
`;

exports[`Icon freeCancellation renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M23,12h-3c0,4.4-3.6,8-8,8c-1.6,0-3-0.5-4.3-1.2l1.5-1.5C10,17.8,11,18,12,18c3.3,0,6-2.7,6-6h-3l4-4L23,12z M6,12
  	c0-3.3,2.7-6,6-6c1,0,2,0.2,2.8,0.7l1.5-1.5C15,4.5,13.6,4,12,4c-4.4,0-8,3.6-8,8H1l4,4l4-4H6z"
  />
</svg>
`;

exports[`Icon fridge renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M6,21c-0.6,0-1-0.4-1-1V3l0,0c0-0.6,0.4-1,1-1l0,0h12c0.6,0,1,0.4,1,1v17c0,0.6-0.4,1-1,1v1h-2
  	v-1H8v1H6V21z M19,9V8H5v1H19z M7,4v2h2V4H7z M7,11v6h2v-6H7z"
  />
</svg>
`;

exports[`Icon gallery renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M22,16V4c0-1.1-0.9-2-2-2H8C6.9,2,6,2.9,6,4v12c0,1.1,0.9,2,2,2h12C21.1,18,22,17.1,22,16z
  	 M11,12l2,2.7l3-3.7l4,5H8L11,12z M2,6v14c0,1.1,0.9,2,2,2h14v-2H4V6H2z"
  />
</svg>
`;

exports[`Icon gas renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19.8,7.2L19.8,7.2l-3.7-3.7L15,4.6l2.1,2.1C16.2,7,15.5,7.9,15.5,9c0,1.4,1.1,2.5,2.5,2.5
  	c0.4,0,0.7-0.1,1-0.2v7.2c0,0.5-0.4,1-1,1s-1-0.5-1-1V14c0-1.1-0.9-2-2-2h-1V5c0-1.1-0.9-2-2-2H6C4.9,3,4,3.9,4,5v16h10v-7.5h1.5v5
  	c0,1.4,1.1,2.5,2.5,2.5s2.5-1.1,2.5-2.5V9C20.5,8.3,20.2,7.7,19.8,7.2z M12,10H6V5h6V10z M18,10c-0.6,0-1-0.4-1-1s0.4-1,1-1
  	s1,0.4,1,1S18.6,10,18,10z"
  />
</svg>
`;

exports[`Icon globe renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M18.9,8H16
  	c-0.3-1.2-0.8-2.5-1.4-3.6C16.4,5.1,18,6.3,18.9,8z M12,4c0.8,1.2,1.5,2.5,1.9,4h-3.8C10.5,6.6,11.2,5.2,12,4z M4.3,14
  	C4.1,13.4,4,12.7,4,12s0.1-1.4,0.3-2h3.4c-0.1,0.7-0.1,1.3-0.1,2s0.1,1.3,0.1,2H4.3z M5.1,16h3c0.3,1.2,0.8,2.5,1.4,3.6
  	C7.6,18.9,6,17.7,5.1,16L5.1,16z M8,8H5c1-1.7,2.5-2.9,4.3-3.6C8.8,5.5,8.3,6.8,8,8L8,8z M12,20c-0.8-1.2-1.5-2.5-1.9-4h3.8
  	C13.5,17.4,12.8,18.8,12,20z M14.3,14H9.7c-0.1-0.7-0.2-1.3-0.2-2s0.1-1.4,0.2-2h4.7c0.1,0.6,0.2,1.3,0.2,2S14.4,13.3,14.3,14z
  	 M14.6,19.6c0.6-1.1,1.1-2.3,1.4-3.6h2.9C18,17.6,16.4,18.9,14.6,19.6L14.6,19.6z M16.4,14c0.1-0.7,0.1-1.3,0.1-2s-0.1-1.3-0.1-2
  	h3.4c0.2,0.6,0.3,1.3,0.3,2s-0.1,1.4-0.3,2H16.4z"
  />
</svg>
`;

exports[`Icon gps renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,8.4c-2,0-3.6,1.6-3.6,3.6s1.6,3.6,3.6,3.6s3.6-1.6,3.6-3.6S14,8.4,12,8.4z M20.1,11.1
  	c-0.5-3.8-3.5-6.8-7.2-7.2V2h-1.8v1.9c-3.8,0.4-6.8,3.4-7.2,7.2H2v1.8h1.9c0.5,3.8,3.5,6.8,7.2,7.2V22h1.8v-1.9
  	c3.8-0.5,6.8-3.5,7.2-7.2H22v-1.8H20.1z M12,18.4c-3.5,0-6.4-2.8-6.4-6.4S8.5,5.6,12,5.6s6.4,2.8,6.4,6.4S15.5,18.4,12,18.4z"
  />
</svg>
`;

exports[`Icon graph renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M3.5,18.5l6-6l4,4L22,6.9l-1.4-1.4l-7.1,8l-4-4L2,17L3.5,18.5z"
  />
</svg>
`;

exports[`Icon grid renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M4,8h4V4H4V8z M10,20h4v-4h-4V20z M4,20h4v-4H4V20z M4,14h4v-4H4V14z M10,14h4v-4h-4V14z M16,4
  	v4h4V4H16z M10,8h4V4h-4V8z M16,14h4v-4h-4V14z M16,20h4v-4h-4V20z"
  />
</svg>
`;

exports[`Icon guests renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M16.5,12c1.4,0,2.5-1.1,2.5-2.5S17.9,7,16.5,7S14,8.1,14,9.5S15.1,12,16.5,12z M9,11
  	c1.7,0,3-1.3,3-3s-1.3-3-3-3S6,6.3,6,8S7.3,11,9,11z M16.5,14c-1.8,0-5.5,0.9-5.5,2.8V19h11v-2.2C22,14.9,18.3,14,16.5,14z M9,13
  	c-2.3,0-7,1.2-7,3.5V19h7v-2.2c0-0.9,0.3-2.3,2.4-3.5C10.5,13.1,9.7,13,9,13z"
  />
</svg>
`;

exports[`Icon help renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,19h-2v-2h2V19z M15.1,11.2
  	l-0.9,0.9C13.4,12.9,13,13.5,13,15h-2v-0.5c0-1.1,0.4-2.1,1.2-2.8l1.2-1.3C13.8,10.1,14,9.6,14,9c0-1.1-0.9-2-2-2s-2,0.9-2,2H8
  	c0-2.2,1.8-4,4-4s4,1.8,4,4C16,9.9,15.6,10.7,15.1,11.2z"
  />
</svg>
`;

exports[`Icon home renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M10,20.5v-6h4v6h5v-8h3l-10-9l-10,9h3v8H10z"
  />
</svg>
`;

exports[`Icon hotelCircle renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M9.7,12.2
  	c0.8,0,1.4-0.6,1.4-1.4s-0.6-1.4-1.4-1.4c-0.8,0-1.4,0.6-1.4,1.4S9,12.2,9.7,12.2z M15.2,9.4h-3.6v3.3H7.9V8.5H7v7h0.9v-1.4h8.2v1.4
  	H17v-4.2C17,10.3,16.2,9.4,15.2,9.4z"
  />
</svg>
`;

exports[`Icon hotels renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,7V3H2v18h20V7H12z M6,19H4v-2h2V19z M6,15H4v-2h2V15z M6,11H4V9h2V11z M6,7H4V5h2V7z M10,19
  	H8v-2h2V19z M10,15H8v-2h2V15z M10,11H8V9h2V11z M10,7H8V5h2V7z M20,19h-8v-2h2v-2h-2v-2h2v-2h-2V9h8V19z M18,11h-2v2h2V11z M18,15
  	h-2v2h2V15z"
  />
</svg>
`;

exports[`Icon hybrid renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M17,7.5c-9,2-11.1,8.2-13.2,13.3l1.9,0.7l0.9-2.3c0.5,0.2,1,0.3,1.4,0.3c11,0,14-17,14-17c-1,2-8,2.2-13,3.2
  	s-7,5.2-7,7.2s1.8,3.8,1.8,3.8C7,7.5,17,7.5,17,7.5z"
  />
</svg>
`;

exports[`Icon inclusive renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7.8,13.1l2.8-2.8l-7-7C2,4.9,2,7.4,3.6,9L7.8,13.1L7.8,13.1z M14.6,11.3
  	c1.5,0.7,3.7,0.2,5.3-1.4c1.9-1.9,2.2-4.6,0.8-6.1c-1.5-1.5-4.2-1.1-6.1,0.8c-1.6,1.6-2.1,3.7-1.4,5.3l-9.8,9.8l1.4,1.4l6.9-6.9
  	l6.9,6.9l1.4-1.4l-6.9-6.9L14.6,11.3z"
  />
</svg>
`;

exports[`Icon information renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,17h-2v-6h2V17z M13,9h-2V7
  	h2V9z"
  />
</svg>
`;

exports[`Icon informationOutline renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20
  	c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z"
  />
</svg>
`;

exports[`Icon instagram renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21.9,7.9c0-1.1-0.2-1.8-0.5-2.4c-0.3-0.7-0.6-1.2-1.2-1.8s-1.1-0.9-1.8-1.2c-0.6-0.2-1.4-0.4-2.4-0.5
  	C15.1,2,14.7,2,12,2S8.9,2,7.9,2.1c-1.1,0-1.8,0.2-2.4,0.5C4.8,2.8,4.2,3.1,3.7,3.7S2.8,4.8,2.5,5.5C2.3,6.1,2.1,6.8,2.1,7.9
  	C2,8.9,2,9.3,2,12s0,3.1,0.1,4.1c0,1.1,0.2,1.8,0.5,2.4c0.3,0.7,0.6,1.2,1.2,1.8s1.1,0.9,1.8,1.2c0.6,0.2,1.4,0.4,2.4,0.5
  	C8.9,22,9.3,22,12,22s3.1,0,4.1-0.1c1.1,0,1.8-0.2,2.4-0.5c0.7-0.3,1.2-0.6,1.8-1.2s0.9-1.1,1.2-1.8c0.2-0.6,0.4-1.4,0.5-2.4
  	c0-1.1,0.1-1.4,0.1-4.1S22,8.9,21.9,7.9z M20.1,16c0,1-0.2,1.5-0.3,1.9c-0.2,0.5-0.4,0.8-0.7,1.1c-0.3,0.3-0.7,0.6-1.1,0.7
  	c-0.4,0.1-0.9,0.3-1.9,0.3c-1.1,0-1.4,0.1-4,0.1c-2.7,0-3,0-4-0.1c-1,0-1.5-0.2-1.9-0.3C5.6,19.6,5.3,19.4,5,19
  	c-0.3-0.3-0.6-0.7-0.7-1.1C4.1,17.5,3.9,17,3.9,16c0-1.1-0.1-1.4-0.1-4s0-3,0.1-4c0-1,0.2-1.5,0.3-1.9C4.4,5.6,4.6,5.3,5,5
  	c0.3-0.3,0.7-0.6,1.1-0.7C6.5,4.1,7,3.9,8,3.9c1.1,0,1.4-0.1,4-0.1s3,0,4,0.1c1,0,1.5,0.2,1.9,0.3C18.4,4.4,18.7,4.6,19,5
  	c0.3,0.3,0.6,0.7,0.7,1.1C19.9,6.5,20.1,7,20.1,8c0,1.1,0.1,1.4,0.1,4S20.2,15,20.1,16z M12,6.9c-2.8,0-5.1,2.3-5.1,5.1
  	s2.3,5.1,5.1,5.1s5.1-2.3,5.1-5.1S14.8,6.9,12,6.9z M12,15.3c-1.8,0-3.3-1.5-3.3-3.3s1.5-3.3,3.3-3.3s3.3,1.5,3.3,3.3
  	S13.8,15.3,12,15.3z M18.5,6.7c0,0.7-0.5,1.2-1.2,1.2c-0.7,0-1.2-0.5-1.2-1.2s0.5-1.2,1.2-1.2C18,5.5,18.5,6,18.5,6.7z"
  />
</svg>
`;

exports[`Icon key renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12.6,10.1C11.8,8,9.8,6.5,7.5,6.5C4.4,6.5,2,8.9,2,12s2.4,5.5,5.5,5.5c2.4,0,4.4-1.5,5.1-3.6h4
  	v3.6h3.6v-3.7H22v-3.7H12.6z M7.5,13.8c-1,0-1.8-0.8-1.8-1.8s0.8-1.8,1.8-1.8S9.3,11,9.3,12S8.5,13.8,7.5,13.8z"
  />
</svg>
`;

exports[`Icon kitchenette renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,2H4C3.4,2,3,2.4,3,3v3h18V3C21,2.4,20.6,2,20,2z M6,5C5.5,5,5,4.5,5,4s0.5-1,1-1s1,0.5,1,1S6.5,5,6,5z
  	 M10,5C9.5,5,9,4.5,9,4s0.5-1,1-1s1,0.5,1,1S10.5,5,10,5z M14,5c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S14.5,5,14,5z M18,5
  	c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S18.5,5,18,5z M3,20c0,0.6,0.4,1,1,1h1v1h2v-1h10v1h2v-1h1c0.6,0,1-0.4,1-1V7H3V20z M7,8h10v1
  	H7V8z M5,10h14v9H5V10z"
  />
</svg>
`;

exports[`Icon laptop renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M18.6,17.2c0.9,0,1.6-0.8,1.6-1.8V6.8c0-1-0.7-1.8-1.6-1.8H5.4C4.5,5,3.7,5.8,3.7,6.8v8.8
  	c0,1,0.7,1.8,1.6,1.8H2V19h20v-1.8H18.6z M5.4,6.8h13.4v8.8H5.4V6.8z"
  />
</svg>
`;

exports[`Icon lateNight renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M12.8,7c-2.9,0-5.3,2.2-5.3,5
  	s2.4,5,5.3,5c1,0,1.9-0.2,2.7-0.7c-1.6-0.9-2.7-2.5-2.7-4.3s1.1-3.5,2.7-4.3C14.7,7.2,13.8,7,12.8,7z"
  />
</svg>
`;

exports[`Icon list renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M3,13h2v-2H3V13z M3,17h2v-2H3V17z M3,9h2V7H3V9z M7,13h14v-2H7V13z M7,17h14v-2H7V17z M7,7v2
  	h14V7H7z"
  />
</svg>
`;

exports[`Icon lock renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M18,9.5h-1v-2c0-2.8-2.2-5-5-5s-5,2.2-5,5v2H6c-1.1,0-2,0.9-2,2v8c0,1.1,0.9,2,2,2h12
  	c1.1,0,2-0.9,2-2v-8C20,10.4,19.1,9.5,18,9.5z M12,17.5c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S13.1,17.5,12,17.5z M15.1,9.5H8.9v-2
  	c0-1.7,1.4-3.1,3.1-3.1s3.1,1.4,3.1,3.1V9.5z"
  />
</svg>
`;

exports[`Icon loyalty renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21.4,11.6l-9-9C12.1,2.2,11.6,2,11,2H4C2.9,2,2,2.9,2,4v7c0,0.6,0.2,1.1,0.6,1.4l9,9
  	c0.4,0.4,0.9,0.6,1.4,0.6s1.1-0.2,1.4-0.6l7-7c0.4-0.4,0.6-0.9,0.6-1.4S21.8,11.9,21.4,11.6z M5.5,7C4.7,7,4,6.3,4,5.5S4.7,4,5.5,4
  	S7,4.7,7,5.5S6.3,7,5.5,7z M17.3,15.3L13,19.5l-4.3-4.3C8.3,14.8,8,14.2,8,13.5c0-1.4,1.1-2.5,2.5-2.5c0.7,0,1.3,0.3,1.8,0.7
  	l0.7,0.7l0.7-0.7c0.5-0.4,1.1-0.7,1.8-0.7c1.4,0,2.5,1.1,2.5,2.5C18,14.2,17.7,14.8,17.3,15.3z"
  />
</svg>
`;

exports[`Icon luggage renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,6.5h-4v-2c0-1.1-0.9-2-2-2h-4c-1.1,0-2,0.9-2,2v2H4c-1.1,0-2,0.9-2,2v11c0,1.1,0.9,2,2,2h16
  	c1.1,0,2-0.9,2-2v-11C22,7.4,21.1,6.5,20,6.5z M14,6.5h-4v-2h4V6.5z"
  />
</svg>
`;

exports[`Icon manual renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M7.4,8h2l2.5,4.9L14.4,8h2v8h-1.6v-5.4l-2.3,4.6h-1.1l-2.3-4.6V16H7.4V8z"
  />
</svg>
`;

exports[`Icon map renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20.5,3h-0.2L15,5.1L9,3L3.4,4.9C3.2,5,3,5.2,3,5.4v15.1C3,20.8,3.2,21,3.5,21h0.2L9,18.9l6,2.1
  	l5.6-1.9c0.2-0.1,0.4-0.2,0.4-0.5V3.5C21,3.2,20.8,3,20.5,3z M15,19l-6-2.1V5l6,2.1V19z"
  />
</svg>
`;

exports[`Icon menu renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M3,13h18v-2H3V13z M3,18h18v-2H3V18z M3,6v2h18V6H3z"
  />
</svg>
`;

exports[`Icon microwave renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21,5.5H3c-0.6,0-1,0.4-1,1v10c0,0.6,0.4,1,1,1h1v1h2v-1h12v1h2v-1h1c0.6,0,1-0.4,1-1v-10
  	C22,5.9,21.6,5.5,21,5.5z M15,15.5H4v-8h11V15.5z M17,15.5c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S17.5,15.5,17,15.5z M17,12.5
  	c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S17.5,12.5,17,12.5z M17,9.5c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S17.5,9.5,17,9.5z M20,15.5
  	h-1v-8h1V15.5z"
  />
</svg>
`;

exports[`Icon mileage renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,16c-1.7,0-3-1.3-3-3c0-1.1,0.6-2.1,1.5-2.6l9.7-5.6l-5.5,9.6C14.2,15.3,13.2,16,12,16L12,16
  	z M12,3c1.8,0,3.5,0.5,5,1.3l-2.1,1.2C14,5.2,13,5,12,5c-4.4,0-8,3.6-8,8c0,2.2,0.9,4.2,2.3,5.6l0,0c0.4,0.4,0.4,1,0,1.4
  	c-0.4,0.4-1,0.4-1.4,0l0,0C3.1,18.3,2,15.8,2,13C2,7.5,6.5,3,12,3L12,3z M22,13c0,2.8-1.1,5.3-2.9,7.1l0,0c-0.4,0.4-1,0.4-1.4,0
  	c-0.4-0.4-0.4-1,0-1.4l0,0c1.5-1.4,2.3-3.4,2.3-5.6c0-1-0.2-2-0.5-2.9L20.7,8C21.5,9.5,22,11.2,22,13z"
  />
</svg>
`;

exports[`Icon minus renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7,11v2h10v-2H7z"
  />
</svg>
`;

exports[`Icon overnight renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M17.6,8.2l0.6,2L16.5,9l-1.7,1.2l0.6-2l-1.7-1.3h2.1l0.7-2l0.7,2h2.1L17.6,8.2z M19.4,19
  	C15.4,23,9,23,5,19C1,15,1,8.6,5,4.6C6.3,3.3,7.9,2.4,9.5,2c-0.9,3.4,0,7.2,2.6,9.8c2.7,2.7,6.4,3.5,9.8,2.6
  	C21.6,16.1,20.7,17.7,19.4,19L19.4,19z"
  />
</svg>
`;

exports[`Icon parking renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12.5,3h-7v18h4v-6h3c3.3,0,6-2.7,6-6S15.8,3,12.5,3z M12.7,11H9.5V7h3.2c1.1,0,2,0.9,2,2
  	S13.8,11,12.7,11z"
  />
</svg>
`;

exports[`Icon pets renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M4.5,11.5C3.1,11.5,2,10.4,2,9s1.1-2.5,2.5-2.5S7,7.6,7,9S5.9,11.5,4.5,11.5z M9,7.5
  	C7.6,7.5,6.5,6.4,6.5,5S7.6,2.5,9,2.5s2.5,1.1,2.5,2.5S10.4,7.5,9,7.5z M15,7.5c-1.4,0-2.5-1.1-2.5-2.5s1.1-2.5,2.5-2.5
  	s2.5,1.1,2.5,2.5S16.4,7.5,15,7.5z M19.5,11.5c-1.4,0-2.5-1.1-2.5-2.5s1.1-2.5,2.5-2.5S22,7.6,22,9S20.9,11.5,19.5,11.5z M17.3,14.4
  	L17.3,14.4c1.3,1.3,2.9,2.8,2.6,4.8c-0.3,1-1,2-2.3,2.3c-0.7,0.1-3.1-0.4-5.5-0.4h-0.2c-2.5,0-4.8,0.6-5.5,0.4
  	c-1.3-0.3-2-1.3-2.3-2.3c-0.3-2,1.3-3.5,2.6-4.8c0.9-1,1.6-1.9,2.5-2.9c0.5-0.5,1.1-1.1,1.8-1.3c0.1,0,0.2-0.1,0.3-0.1
  	C11.5,10,11.7,10,12,10s0.5,0,0.8,0c0.1,0,0.2,0.1,0.3,0.1c0.7,0.2,1.3,0.8,1.8,1.3C15.7,12.5,16.5,13.3,17.3,14.4z"
  />
</svg>
`;

exports[`Icon phone renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M6.6,10.8c1.4,2.8,3.8,5.1,6.6,6.6l2.2-2.2c0.3-0.3,0.7-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6c0.5,0,1,0.4,1,1V20
  	c0,0.5-0.5,1-1,1C10.6,21,3,13.4,3,4c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.5,0.6,3.6c0.1,0.3,0,0.7-0.2,1L6.6,10.8z"
  />
</svg>
`;

exports[`Icon picture renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21,19V5c0-1.1-0.9-2-2-2H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14C20.1,21,21,20.1,21,19z
  	 M8.5,13.5l2.5,3l3.5-4.5l4.5,6H5L8.5,13.5z"
  />
</svg>
`;

exports[`Icon pin renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C8.1,2,5,5.1,5,9c0,5.2,7,13,7,13s7-7.8,7-13C19,5.1,15.9,2,12,2z M12,11.5
  	c-1.4,0-2.5-1.1-2.5-2.5s1.1-2.5,2.5-2.5s2.5,1.1,2.5,2.5S13.4,11.5,12,11.5z"
  />
</svg>
`;

exports[`Icon plus renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M13,7h-2v4H7v2h4v4h2v-4h4v-2h-4V7z"
  />
</svg>
`;

exports[`Icon pool renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M22,21c-1.1,0-1.7-0.4-2.2-0.6c-0.4-0.2-0.6-0.4-1.1-0.4c-0.6,0-0.8,0.1-1.1,0.4
  	c-0.5,0.3-1.1,0.6-2.2,0.6s-1.7-0.4-2.2-0.6C12.8,20.1,12.6,20,12,20s-0.8,0.1-1.2,0.4c-0.4,0.2-1,0.6-2.1,0.6S7,20.6,6.5,20.4
  	C6.1,20.1,5.9,20,5.3,20s-0.8,0.1-1.1,0.4C3.7,20.6,3.1,21,2,21v-2c0.6,0,0.8-0.1,1.1-0.4C3.6,18.4,4.2,18,5.3,18s1.7,0.4,2.2,0.6
  	C7.9,18.9,8.1,19,8.7,19c0.6,0,0.8-0.1,1.2-0.4c0.4-0.2,1-0.6,2.1-0.6s1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.2,0.4
  	c0.6,0,0.8-0.1,1.1-0.4c0.4-0.3,1.1-0.6,2.2-0.6c1.1,0,1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.1,0.4V21z M22,16.5
  	c-1.1,0-1.7-0.4-2.2-0.6c-0.4-0.2-0.6-0.4-1.1-0.4c-0.6,0-0.8,0.1-1.1,0.4c-0.5,0.3-1.1,0.6-2.2,0.6s-1.7-0.4-2.2-0.6
  	c-0.4-0.2-0.6-0.4-1.1-0.4c-0.6,0-0.8,0.1-1.2,0.4c-0.4,0.3-1.1,0.6-2.2,0.6S7,16.1,6.5,15.9c-0.4-0.2-0.6-0.4-1.2-0.4
  	s-0.8,0.1-1.1,0.4c-0.5,0.3-1.1,0.6-2.2,0.6v-2c0.6,0,0.8-0.1,1.1-0.4c0.5-0.3,1.1-0.6,2.2-0.6s1.7,0.4,2.2,0.6
  	c0.4,0.2,0.6,0.4,1.1,0.4c0.6,0,0.8-0.1,1.2-0.4c0.5-0.3,1.1-0.6,2.2-0.6s1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.1,0.4
  	c0.6,0,0.8-0.1,1.2-0.4c0.4-0.3,1.1-0.6,2.2-0.6c1.1,0,1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.1,0.4V16.5L22,16.5z M8.7,12
  	c-0.6,0-0.8-0.1-1.2-0.4c-0.2-0.1-0.4-0.2-0.7-0.4L10,8L9,7C7.9,5.9,6.8,5.5,5,5.5V3c2.5,0,3.9,0.4,5.5,2l6.4,6.4
  	c-0.1,0.1-0.3,0.2-0.4,0.2c-0.4,0.3-0.6,0.4-1.2,0.4c-0.6,0-0.8-0.1-1.2-0.4c-0.4-0.2-1-0.6-2.1-0.6s-1.7,0.4-2.2,0.6
  	C9.4,11.9,9.2,12,8.7,12z M16.5,8C15.1,8,14,6.9,14,5.5S15.1,3,16.5,3S19,4.1,19,5.5S17.9,8,16.5,8z"
  />
</svg>
`;

exports[`Icon printer renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19,8H5c-1.7,0-3,1.3-3,3v6h4v4h12v-4h4v-6C22,9.3,20.7,8,19,8z M16,19H8v-5h8V19z M19,12
  	c-0.5,0-1-0.4-1-1s0.5-1,1-1s1,0.4,1,1S19.5,12,19,12z M18,3H6v4h12V3z"
  />
</svg>
`;

exports[`Icon quilt renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M9.4,19h5.3v-6.5H9.4V19z M3,19h5.3V5H3V19z M15.7,19H21v-6.5h-5.3V19z M9.4,5v6.5H21V5H9.4z"
  />
</svg>
`;

exports[`Icon radioChecked renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,7c-2.8,0-5,2.2-5,5s2.2,5,5,5s5-2.2,5-5S14.8,7,12,7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10
  	s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon radioEmpty renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon radioMinus renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7,11v2h10v-2H7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20
  	c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon radioPlus renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M13,7h-2v4H7v2h4v4h2v-4h4v-2h-4V7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10
  	S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon refresh renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M17.6,6.3C16.2,4.9,14.2,4,12,4c-4.4,0-8,3.6-8,8s3.6,8,8,8c3.7,0,6.8-2.6,7.7-6h-2.1c-0.8,2.3-3,4-5.6,4
  	c-3.3,0-6-2.7-6-6s2.7-6,6-6c1.7,0,3.1,0.7,4.2,1.8L13,11h7V4L17.6,6.3z"
  />
</svg>
`;

exports[`Icon restaurant renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M11,9H9V2H7v7H5V2H3v7c0,2.1,1.7,3.8,3.8,4v9h2.5v-9c2-0.2,3.7-1.9,3.7-4V2h-2V9z M16,6v8h2.5v8
  	H21V2C18.2,2,16,4.2,16,6z"
  />
</svg>
`;

exports[`Icon ribbon renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M11,17.5c0.1,0,0.1,0,0.2-0.1L9,22l-1.5-2L5,20.2l2.1-4.4h0.1c0.2,0.2,0.4,0.4,0.6,0.7c0.4,0.5,0.8,1,1.4,1.2
  	c0.2,0.1,0.4,0.1,0.5,0.1C10.2,17.8,10.6,17.7,11,17.5z M16.8,15.8c-0.2,0.2-0.4,0.4-0.6,0.7c-0.4,0.5-0.8,1-1.4,1.2
  	c-0.6,0.2-1.2,0-1.8-0.2c-0.1,0-0.1,0-0.2-0.1L15,22l1.5-2l2.5,0.2L16.8,15.8L16.8,15.8z M20,9.4c0,0.3-0.3,0.7-0.6,1.1
  	c-0.2,0.3-0.5,0.7-0.6,1c-0.1,0.4-0.1,0.8-0.1,1.2c0,0.5,0,0.9-0.2,1.2s-0.6,0.4-1.1,0.6c-0.4,0.1-0.8,0.3-1.2,0.5
  	c-0.3,0.2-0.6,0.6-0.8,0.9c-0.3,0.4-0.6,0.7-0.9,0.8c-0.3,0.1-0.7,0-1.2-0.2c-0.4-0.1-0.8-0.2-1.3-0.2c-0.4,0-0.9,0.1-1.3,0.2
  	c-0.5,0.1-0.9,0.3-1.2,0.2c-0.3-0.1-0.6-0.5-0.9-0.8c-0.3-0.3-0.5-0.7-0.8-0.9S7,14.6,6.6,14.5c-0.5-0.2-0.9-0.3-1.1-0.6
  	s-0.2-0.7-0.2-1.2c0-0.4,0-0.8-0.1-1.2s-0.4-0.7-0.6-1C4.3,10.1,4,9.8,4,9.4s0.3-0.7,0.6-1.1C4.8,8,5,7.7,5.2,7.3
  	C5.3,6.9,5.3,6.4,5.3,6c0-0.5,0-0.9,0.2-1.2c0.2-0.3,0.6-0.4,1.1-0.6C7,4.2,7.4,4,7.8,3.8c0.3-0.2,0.6-0.6,0.8-0.9
  	C8.9,2.5,9.2,2.1,9.5,2c0.1,0,0.2,0,0.2,0c0.3,0,0.6,0.1,0.9,0.2c0.4,0.1,0.8,0.2,1.3,0.2c0.4,0,0.9-0.1,1.3-0.2
  	c0.5-0.1,0.9-0.3,1.2-0.2s0.6,0.5,0.9,0.8c0.3,0.3,0.5,0.7,0.8,0.9C16.6,4,17,4.2,17.4,4.3c0.5,0.2,0.9,0.3,1.1,0.6
  	c0.2,0.3,0.2,0.7,0.2,1.2c0,0.4,0,0.8,0.1,1.2c0.1,0.4,0.4,0.7,0.6,1C19.7,8.7,20,9.1,20,9.4z M16.5,7.6l-0.9-0.9l-4.9,4.9L8.4,9.3
  	l-0.9,0.9l3.2,3.2L16.5,7.6z"
  />
</svg>
`;

exports[`Icon roomSize renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,13H9.6v3L6,12l3.6-4v3H12h2.4V8l3.6,4l-3.6,4v-3H12z M3,3h18c0.6,0,1,0.4,1,1v16
  	c0,0.6-0.4,1-1,1H3c-0.6,0-1-0.4-1-1V4l0,0C2,3.4,2.4,3,3,3L3,3z M4,5v14h16V5H4z"
  />
</svg>
`;

exports[`Icon search renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M15.5,14h-0.8l-0.3-0.3c1-1.1,1.6-2.6,1.6-4.2C16,5.9,13.1,3,9.5,3S3,5.9,3,9.5S5.9,16,9.5,16
  	c1.6,0,3.1-0.6,4.2-1.6l0.3,0.3v0.8l5,5l1.5-1.5L15.5,14z M9.5,14C7,14,5,12,5,9.5S7,5,9.5,5S14,7,14,9.5S12,14,9.5,14z"
  />
</svg>
`;

exports[`Icon searchRecent renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M17,14h-0.8l-0.3-0.3c1-1.1,1.6-2.6,1.6-4.2C17.5,5.9,14.6,3,11,3S4.5,6,4.5,9.5H2l3.8,4l4.2-4H6.5
  	C6.5,7,8.5,5,11,5s4.5,2,4.5,4.5c0,2.5-2,4.5-4.5,4.5c-0.7,0-1.3-0.1-1.8-0.4l-1.5,1.5c1,0.6,2.1,0.9,3.3,0.9c1.6,0,3.1-0.6,4.2-1.6
  	l0.3,0.3v0.8l5,5L22,19L17,14z"
  />
</svg>
`;

exports[`Icon seat renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M4,18v3h3v-3h10v3h3v-6H4V18z M19,10h3v3h-3V10z M2,10h3v3H2V10z M17,13H7V5c0-1.1,0.9-2,2-2h6
  	c1.1,0,2,0.9,2,2V13z"
  />
</svg>
`;

exports[`Icon seatBusiness renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M5.3,6.1C4.5,5.5,4.2,4.3,4.9,3.4c0.6-0.9,1.9-1.1,2.8-0.5c0.9,0.6,1.1,1.8,0.4,2.8
  	C7.5,6.6,6.3,6.8,5.3,6.1L5.3,6.1z M16,19.5H8.9c-1.5,0-2.7-1.1-3-2.5L4,7.5H2l2,9.8c0.4,2.4,2.5,4.2,4.9,4.2H16V19.5z M16.2,15.5
  	h-4.8l-1-4.1c1.6,0.9,3.3,1.5,5.2,1.2v-2.1c-1.8,0.3-3.6-0.3-4.8-1.3L9.1,8C8.9,7.8,8.7,7.7,8.4,7.6c-0.3-0.1-0.7-0.1-1-0.1l0,0
  	c-1.2,0.2-2,1.4-1.8,2.6L7,16c0.2,1.5,1.4,2.5,2.8,2.5h6.9l3.8,3L22,20L16.2,15.5z"
  />
</svg>
`;

exports[`Icon seatEconomy renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M7.6,5.4c-0.8-0.8-0.8-2,0-2.8s2-0.8,2.8,0c0.8,0.8,0.8,2.1,0,2.8C9.6,6.2,8.4,6.2,7.6,5.4z
  	 M6,16V7H4v9c0,2.8,2.2,5,5,5h6v-2H9C7.3,19,6,17.7,6,16z M20,20.1L14.9,15h-3.4v-3.7c1.4,1.2,3.6,2.2,5.5,2.2v-2.2
  	c-1.7,0-3.6-0.9-4.7-2l-1.4-1.6c-0.2-0.2-0.4-0.4-0.7-0.5C9.9,7.1,9.6,7,9.3,7l0,0C8,7,7,8,7,9.2V15c0,1.7,1.3,3,3,3h5.1l3.5,3.5
  	L20,20.1z"
  />
</svg>
`;

exports[`Icon security renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2L4,5.6v5.5c0,5,3.4,9.8,8,10.9c4.6-1.1,8-5.9,8-10.9V5.6L12,2z M12,12h6.2
  	c-0.5,3.7-2.9,7.1-6.2,8.1V12l-6.2,0V6.8L12,4V12z"
  />
</svg>
`;

exports[`Icon shuttle renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M16.5,5.5H3.8C2.8,5.5,2,6.3,2,7.4v8.4h1.8c0,1.5,1.2,2.8,2.7,2.8s2.7-1.3,2.7-2.8h5
  	c0,1.5,1.2,2.8,2.7,2.8s2.7-1.3,2.7-2.8H22v-4.6L16.5,5.5z M3.8,11.1V7.4h3.6v3.7H3.8z M6.5,17.1c-0.7,0-1.4-0.6-1.4-1.4
  	c0-0.7,0.6-1.4,1.4-1.4s1.4,0.7,1.4,1.4C7.9,16.5,7.3,17.1,6.5,17.1z M12.9,11.1H9.3V7.4h3.6V11.1z M17,17.1c-0.7,0-1.4-0.6-1.4-1.4
  	c0-0.7,0.6-1.4,1.4-1.4s1.4,0.7,1.4,1.4C18.4,16.5,17.7,17.1,17,17.1z M14.7,11.1V7.4h0.9l3.6,3.7H14.7z"
  />
</svg>
`;

exports[`Icon smoking renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M2,5.5l7,7H2v3h10l7,7l1.3-1.2l-17-17L2,5.5z M20.5,12.5H22v3h-1.5V12.5z M18,12.5h1.5v3H18
  	V12.5z M18.9,4.4c0.6-0.6,1-1.5,1-2.4h-1.5c0,1-0.8,1.8-1.9,1.8v1.5c2.2,0,4,1.8,4,4.1v2.1H22V9.4C22,7.2,20.7,5.3,18.9,4.4z
  	 M14.5,8.2H16c1.1,0,2,0.7,2,2.1v1.2h1.5V9.9c0-1.8-1.6-3.2-3.5-3.2h-1.5c-1,0-1.9-1-1.9-2s0.8-1.8,1.9-1.8V1.5
  	c-1.9,0-3.4,1.5-3.4,3.3S12.6,8.2,14.5,8.2z M17,15.4v-2.9h-2.9L17,15.4z"
  />
</svg>
`;

exports[`Icon spa renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M15.5,9.6c-0.2-2.8-1.3-5.5-3.4-7.6C9.9,4.1,8.7,6.9,8.5,9.6c1.3,0.7,2.5,1.6,3.5,2.7
  	C13,11.2,14.2,10.3,15.5,9.6L15.5,9.6z M9,12.3c-0.1-0.1-0.3-0.2-0.4-0.3C8.7,12.1,8.8,12.2,9,12.3z M15.4,12
  	c-0.1,0.1-0.3,0.2-0.4,0.3C15.1,12.2,15.3,12.1,15.4,12z M12,15.4C9.8,12.2,6.2,10,2,10c0,5.3,3.4,9.8,8,11.5c0.6,0.2,1.3,0.4,2,0.5
  	c0.7-0.1,1.3-0.3,2-0.5c4.7-1.7,8-6.2,8-11.5C17.8,10,14.1,12.2,12,15.4z M8.6,12c-1.1-0.7-2.3-1.3-3.6-1.6
  	C6.3,10.7,7.5,11.3,8.6,12z M19,10.4c-1.3,0.3-2.5,0.9-3.6,1.6C16.5,11.3,17.7,10.7,19,10.4z"
  />
</svg>
`;

exports[`Icon splitTicket renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,12c0,1.1,0.9,2,2,2v4c0,1.1-0.9,2-2,2H4c-1.1,0-2-0.9-2-2v-4c1.1,0,2-0.9,2-2s-0.9-2-2-2V6
  	c0-1.1,0.9-2,2-2h16c1.1,0,2,0.9,2,2v4C20.9,10,20,10.9,20,12z M17,14.2v-1.1l-4.2-2.8v-3c0-0.5-0.4-0.8-0.8-0.8s-0.8,0.4-0.8,0.8v3
  	L7,13.1v1.1l4.2-1.4v3l-1.1,0.8v0.8L12,17l1.8,0.5v-0.8l-1.1-0.8v-3L17,14.2z"
  />
</svg>
`;

exports[`Icon star renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
  />
</svg>
`;

exports[`Icon starHalf renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,17.8V2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
  />
</svg>
`;

exports[`Icon steeringWheel renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M11,19.9c0-4.6-0.7-6.9-2-6.9c-1.3,0-3,0-4.9,0C4.5,16.6,7.4,19.5,11,19.9z M4.1,11
  	C6.7,9.7,9.4,9,12,9s5.3,0.7,7.9,2C19.4,7,16.1,4,12,4S4.6,7,4.1,11z M19.9,13c-2,0-3.6,0-4.9,0c-1.3,0-2,2.3-2,6.9
  	C16.6,19.5,19.5,16.6,19.9,13z M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z"
  />
</svg>
`;

exports[`Icon success renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
  	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
  />
</svg>
`;

exports[`Icon successOutline renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M10.3,16.5L6,12.2L7.2,11l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
  />
</svg>
`;

exports[`Icon swap renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M16,17v-7h-2v7h-3l4,4l4-4H16z M9,3L5,7h3v7h2V7h3L9,3z"
  />
</svg>
`;

exports[`Icon thumbsDown renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M14.5,4H7.1C6.4,4,5.9,4.4,5.6,5l-2.5,5.7C3,10.8,3,11,3,11.2v1.5l0,0v0.1
  	c0,0.9,0.7,1.6,1.6,1.6h5.2l-0.7,3.7v0.2c0,0.3,0.2,0.6,0.3,0.9l0.8,0.8l5.4-5.3c0.3-0.3,0.5-0.6,0.5-1.1v-8C16.1,4.7,15.4,4,14.5,4
  	z M17.7,4v9.6H21V4H17.7z"
  />
</svg>
`;

exports[`Icon thumbsUp renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M3,20h3.3v-9.6H3V20z M21,11.2c0-0.9-0.7-1.6-1.6-1.6h-5.2L15,5.9V5.7c0-0.3-0.2-0.6-0.3-0.9
  	L13.8,4L8.4,9.3c-0.3,0.2-0.5,0.6-0.5,1.1v8c0,0.9,0.7,1.6,1.6,1.6h7.4c0.7,0,1.2-0.4,1.5-1l2.5-5.7C21,13.2,21,13,21,12.8V11.2
  	L21,11.2L21,11.2z"
  />
</svg>
`;

exports[`Icon timer renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M15,1.5H9v2h6V1.5z M11,14.5h2v-6h-2V14.5z M19,7.9l1.4-1.4C20,6,19.5,5.5,19,5.1l-1.4,1.4
  	c-1.6-1.2-3.5-2-5.6-2c-5,0-9,4-9,9s4,9,9,9s9-4,9-9C21,11.4,20.3,9.4,19,7.9z M12,20.5c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7
  	S15.9,20.5,12,20.5z"
  />
</svg>
`;

exports[`Icon trendingUp renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M16,6l2.3,2.3l-4.9,4.9l-4-4L2,16.6L3.4,18l6-6l4,4l6.3-6.3L22,12V6H16z"
  />
</svg>
`;

exports[`Icon trophy renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M19.4,3h-0.6h-1.4c-0.8,0-1.8,0.9-1.8,1.8H8.4c0-0.9-1-1.8-1.8-1.8H5.2H4.6H3v8.1
  	c0,0.9,0.9,1.8,1.8,1.8h2c0.4,1.8,1.5,3.3,4.3,3.6v1.9c-2,0.2-2.7,1.2-2.7,2.3V21h7.2v-0.3c0-1.2-0.7-2.2-2.7-2.3v-1.9
  	c2.8-0.3,4-1.8,4.3-3.6h2c0.9,0,1.8-0.9,1.8-1.8V3H19.4L19.4,3z M4.8,11.1V4.8h1.8v1.8v4.5C5.8,11.1,5.1,11.1,4.8,11.1L4.8,11.1z
  	 M19.2,11.1c-0.3,0-1,0-1.8,0V6.6V4.8h1.8V11.1z"
  />
</svg>
`;

exports[`Icon tune renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M3,17v2h6v-2H3z M3,5v2h10V5H3z M13,21v-2h8v-2h-8v-2h-2v6H13z M7,9v2H3v2h4v2h2V9H7z M21,13v-2
  	H11v2H21z M15,9h2V7h4V5h-4V3h-2V9z"
  />
</svg>
`;

exports[`Icon twitter renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M8.3,19.8c7.5,0,11.7-6.3,11.7-11.7c0-0.2,0-0.4,0-0.5c0.8-0.6,1.5-1.3,2-2.1c-0.7,0.3-1.5,0.5-2.4,0.6
  	c0.9-0.5,1.5-1.3,1.8-2.3c-0.8,0.5-1.7,0.8-2.6,1c-1.3-1.4-3.3-1.7-4.9-0.8s-2.5,2.7-2.1,4.5C8.5,8.4,5.5,6.8,3.4,4.2
  	C2.3,6.1,2.9,8.5,4.7,9.7C4,9.7,3.4,9.5,2.8,9.2c0,0,0,0,0,0.1c0,2,1.4,3.6,3.3,4c-0.6,0.2-1.2,0.2-1.9,0.1c0.5,1.7,2.1,2.8,3.8,2.8
  	C6.6,17.3,4.8,18,3,18c-0.3,0-0.7,0-1-0.1C3.9,19.1,6.1,19.8,8.3,19.8"
  />
</svg>
`;

exports[`Icon unlock renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M18,9.5c1.1,0,2,0.9,2,2v8c0,1.1-0.9,2-2,2H6c-1.1,0-2-0.9-2-2v-8c0-1.1,0.9-2,2-2h9.1v-2
  	c0-1.7-1.4-3.1-3.1-3.1S8.9,5.8,8.9,7.5H7c0-2.8,2.2-5,5-5s5,2.2,5,5v2H18z M12,17.5c1.1,0,2-0.9,2-2s-0.9-2-2-2s-2,0.9-2,2
  	S10.9,17.5,12,17.5z"
  />
</svg>
`;

exports[`Icon user renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,12c2.2,0,4-1.8,4-4s-1.8-4-4-4S8,5.8,8,8S9.8,12,12,12z M12,14c-2.7,0-8,1.3-8,4v2h16v-2
  	C20,15.3,14.7,14,12,14z"
  />
</svg>
`;

exports[`Icon verified renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2L4,5.6v5.5c0,5,3.4,9.8,8,10.9c4.6-1.1,8-5.9,8-10.9V5.6L12,2z M10.2,16.5l-3.6-3.6
  	l1.3-1.3l2.3,2.3l5.9-6l1.3,1.3L10.2,16.5z"
  />
</svg>
`;

exports[`Icon warning renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,13h-2V7h2V13z M13,17h-2v-2
  	h2V17z"
  />
</svg>
`;

exports[`Icon warningOutline renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M13,13h-2V7h2V13z M13,17h-2v-2h2V17z"
  />
</svg>
`;

exports[`Icon web renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M15,18H4
  	v-4h11V18z M15,13H4V9h11V13z M20,18h-4V9h4V18z"
  />
</svg>
`;

exports[`Icon whirlpool renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M11.1,11.5c-0.3-0.2-0.6-0.5-0.8-0.7L8.9,9.2C8.7,9,8.5,8.9,8.2,8.7c-0.3-0.1-0.6-0.2-1-0.2h0
  	C6,8.5,5,9.5,5,10.8v0.8H2v8c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2v-8H11.1z M7,19.5H5v-6h2V19.5z M11,19.5H9v-6h2V19.5z M15,19.5h-2
  	v-6h2V19.5z M19,19.5h-2v-6h2V19.5z M18.6,5.4L18.6,5.4c-0.6-0.7-0.9-1.5-0.7-2.3L18,2.5h-1.9L16,2.9c-0.2,1.4,0.3,2.7,1.3,3.7
  	l0.1,0.1c0.6,0.6,0.8,1.4,0.7,2.2L18,9.5h1.9L20,9.1C20.2,7.7,19.7,6.4,18.6,5.4L18.6,5.4z M14.6,5.4L14.6,5.4c1,1,1.5,2.3,1.3,3.7
  	l-0.1,0.4H14l0.1-0.6c0.1-0.8-0.1-1.6-0.7-2.2l-0.1-0.1c-1-1-1.5-2.4-1.3-3.7l0.1-0.4H14l-0.1,0.6C13.8,3.9,14,4.7,14.6,5.4
  	L14.6,5.4z M7,7.5c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S8.1,7.5,7,7.5z"
  />
</svg>
`;

exports[`Icon wifi renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M2,9.1l1.8,1.8c4.5-4.5,11.8-4.5,16.4,0L22,9.1C16.5,3.6,7.5,3.6,2,9.1z M9.3,16.3L12,19
  	l2.7-2.7C13.3,14.8,10.8,14.8,9.3,16.3z M5.6,12.7l1.8,1.8c2.5-2.5,6.5-2.5,9.1,0l1.8-1.8C14.8,9.2,9.2,9.2,5.6,12.7z"
  />
</svg>
`;

exports[`Icon youtube renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M21.5,6.8c0.4,1.6,0.4,4.8,0.4,4.8s0,3.2-0.4,4.8c-0.2,0.9-0.9,1.5-1.8,1.8
  	c-1.6,0.4-7.8,0.4-7.8,0.4s-6.2,0-7.8-0.4c-0.9-0.2-1.5-0.9-1.8-1.8C2,14.9,2,11.6,2,11.6s0-3.2,0.4-4.8C2.6,6,3.3,5.3,4.2,5.1
  	C5.7,4.7,12,4.7,12,4.7s6.2,0,7.8,0.4C20.6,5.3,21.3,6,21.5,6.8z M10,14.6l5.2-3l-5.2-3V14.6z"
  />
</svg>
`;

exports[`Icon zoomOut renders 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
  height: 24px;
}

<svg
  className="c0"
  fill="currentcolor"
  viewBox="0 0 24 24"
>
  <path
    d="M15,3l2.3,2.3l-2.9,2.9l1.4,1.4l2.9-2.9L21,9V3H15z M3,9l2.3-2.3l2.9,2.9l1.4-1.4L6.7,5.3L9,3H3
  	V9z M9,21l-2.3-2.3l2.9-2.9l-1.4-1.4l-2.9,2.9L3,15v6H9z M21,15l-2.3,2.3l-2.9-2.9l-1.4,1.4l2.9,2.9L15,21h6V15z"
  />
</svg>
`;
